--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: CD
 on:
   push:
     branches: master
+    
+  workflow_dispatch:
 
 env:
   BUILD_OUTPUT: 'build/Build/Products/Debug'
@@ -11,7 +13,7 @@ jobs:
 
   build:
     
-    runs-on: macos-latest
+    runs-on: self-hosted
 
     steps:
 
